--- a/chessboard/chessboard/.babelrc
+++ b/chessboard/chessboard/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["es2015", "react", "stage-1"],
-  "plugins": ["transform-decorators-legacy"]
+  "presets": ["env", "react"],
+  "plugins": ["transform-decorators-legacy", "transform-es2015-arrow-functions",
+    "transform-class-properties",
+  "transform-object-rest-spread"]
 }
