--- a/chessboard/chessboard/package.json
+++ b/chessboard/chessboard/package.json
@@ -2,109 +2,43 @@
   "name": "chessboard",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "ajv": "^6.5.2",
-    "autoprefixer": "9.4.6",
-    "babel-core": "6.26.3",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.5",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2018": "^1.0.0",
-    "babel-preset-react-app": "^7.0.0",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.2",
-    "css-loader": "2.1.0",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "5.12.1",
-    "eslint-config-react-app": "^3.0.6",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "3.2.1",
-    "eslint-plugin-import": "2.15.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.4",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "23.6.0",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "promise": "8.0.2",
-    "raf": "3.4.1",
-    "react": "^16.4.2",
-    "react-dev-utils": "^7.0.1",
-    "react-dom": "^16.4.2",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "resolve": "1.10.0",
-    "style-loader": "0.23.1",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "url-loader": "1.1.2",
-    "webpack": "4.29.0",
-    "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
-    "whatwg-fetch": "3.0.0"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
-  },
   "babel": {
     "presets": [
-      "react-app"
+      "env",
+      "react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-decorators",
+      "transform-decorators-legacy",
+      "transform-es2015-arrow-functions",
+      "transform-class-properties",
+      "transform-object-rest-spread"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
-    ]
+  "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
+    "babel-eslint": "^9.0.0"
   }
 }
